Added CPU Struct

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /.vs/Emu6502/FileContentIndex/8dcf06c5-7e42-45db-a33a-ed7130de01d4.vsidx
 /.vs/Emu6502/v17/Browse.VC.opendb
+/.vs/Emu6502/FileContentIndex/360f02f2-0ff8-430a-9a22-d02a944a17af.vsidx
