Added Memory and Basic FetchByte Operation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
 /.vs/Emu6502/FileContentIndex/8dcf06c5-7e42-45db-a33a-ed7130de01d4.vsidx
 /.vs/Emu6502/v17/Browse.VC.opendb
 /.vs/Emu6502/FileContentIndex/360f02f2-0ff8-430a-9a22-d02a944a17af.vsidx
+/.vs/Emu6502/FileContentIndex/617ddd0d-2a47-47ca-99c3-ba4a919520ed.vsidx
+/.vs/Emu6502/v17/.suo
+/.vs/Emu6502/v17/DocumentLayout.backup.json
+/.vs/Emu6502/v17/DocumentLayout.json
+/Emu6502/x64/Debug/Emu6502.exe.recipe
+/Emu6502/x64/Debug/Emu6502.ilk
+/Emu6502/x64/Debug/Emu6502.log
+/Emu6502/x64/Debug/Emu6502.obj
+/Emu6502/x64/Debug/Emu6502.tlog/CL.command.1.tlog
+/Emu6502/x64/Debug/Emu6502.tlog/Cl.items.tlog
+/Emu6502/x64/Debug/Emu6502.tlog/CL.read.1.tlog
+/Emu6502/x64/Debug/Emu6502.tlog/CL.write.1.tlog
+/Emu6502/x64/Debug/Emu6502.tlog/Emu6502.lastbuildstate
+/Emu6502/x64/Debug/Emu6502.tlog/link.command.1.tlog
+/Emu6502/x64/Debug/Emu6502.tlog/link.read.1.tlog
+/Emu6502/x64/Debug/Emu6502.tlog/link.secondary.1.tlog
+/Emu6502/x64/Debug/Emu6502.tlog/link.write.1.tlog
+/Emu6502/x64/Debug/vc143.idb
+/Emu6502/x64/Debug/vc143.pdb
+/x64/Debug/Emu6502.exe
+/x64/Debug/Emu6502.pdb
