Adding Zero page LDA opcode and code cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /Emu6502/x64/Debug/vc143.pdb
 /x64/Debug/Emu6502.exe
 /x64/Debug/Emu6502.pdb
+/.vs/Emu6502/FileContentIndex/57cdd4b1-d235-4979-b711-c8210f2acfef.vsidx
+/.vs/Emu6502/v17/Browse.VC.db
+/.vs/Emu6502/v17/Browse.VC.db
