FetchWord Implemented and JMP opcode added

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@
 /.vs/Emu6502/FileContentIndex/57cdd4b1-d235-4979-b711-c8210f2acfef.vsidx
 /.vs/Emu6502/v17/Browse.VC.db
 /.vs/Emu6502/v17/Browse.VC.db
+/.vs/Emu6502/v17/Browse.VC.db
+/.vs/Emu6502/v17/Browse.VC.db-shm
+/.vs/Emu6502/v17/Browse.VC.db-wal
+/.vs/Emu6502/v17/Browse.VC.db
+/.vs/Emu6502/v17/Browse.VC.db-shm
+/.vs/Emu6502/v17/Browse.VC.db-wal
